--- a/index.html
+++ b/index.html
@@ -737,27 +737,27 @@
           transition-property: opacity, transform;
           transition-duration: 200ms; /* Reduced duration for faster fade/scale */
         }
-        [x-transition:enter] {
+        [x-transitionenter] {
           opacity: 0;
           transform: scale(0.95);
         }
-        [x-transition:enter-start] {
+        [x-transitionenter-start] {
           opacity: 0;
           transform: scale(0.95);
         }
-        [x-transition:enter-end] {
+        [x-transitionenter-end] {
           opacity: 1;
           transform: scale(1);
         }
-        [x-transition:leave] {
+        [x-transitionleave] {
           opacity: 1;
           transform: scale(1);
         }
-        [x-transition:leave-start] {
+        [x-transitionleave-start] {
           opacity: 1;
           transform: scale(1);
         }
-        [x-transition:leave-end] {
+        [x-transitionleave-end] {
           opacity: 0;
           transform: scale(0.95);
         }
